# watering_controller

./: .gitignore  ERRORCODES.md  LICENSE  README.md  can_protocol.md  flake.nix  sensor_settings.json
can_contract/: Cargo.toml
can_contract/src/: lib.rs
code/: Cargo.toml  README.md
code/src/: main.rs
hardware/prototypes/sensor/: Moisturesensor.kicad_prl  Moisturesensor.kicad_pro  Moisturesensor.kicad_sch
hardware/rp_controller/: .gitignore
hardware/rp_controller/rp_controller/: rp_controller.kicad_prl  rp_controller.kicad_pro  rp_controller.kicad_sch
hardware/sensor/moisture_sensor/: moisture_sensor.kicad_prl  moisture_sensor.kicad_sch
logfiles/: 04072025.CSV  1.CSV  23062025.CSV  excelmakro  plot.gnuplot  preprocess.py  preprocess.sh  show.sh
menu/: Cargo.toml
menu/examples/: cli.rs
menu/src/: lib.rs
moisture_sensor_code/: .gitignore  Cargo.toml  README.md
moisture_sensor_code/.cargo/: config.toml
moisture_sensor_code/src/: main.rs  time_source.rs
rp-controller/: Cargo.toml  index.html  with_moisture.uf2
rp-controller/.cargo/: config.toml
rp-controller/src/: can.rs  debounce.rs  error.rs  main.rs  menu_implementation.rs  net.rs  party.rs  sd_card.rs  settings.rs
rp_controller/: Cargo.toml
rp_controller/.cargo/: config.toml
rp_controller/src/: main.rs
sensor/moisture_sensor/: moisture_sensor.kicad_pcb  moisture_sensor.kicad_pro
ultrasonic_level_sensor/: Cargo.toml
ultrasonic_level_sensor/src/: main.rs
