[package]
name = "water_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0",features = ["defmt", "defmt-timestamp-uptime", "tick-hz-4_000_000"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
assign-resources = "0.4.1"
embassy-embedded-hal = "0.3.0"
static_cell = "2.1.0"
embedded-sdmmc = "0.8.1"
[profile.dev]
opt-level = "s"
[profile.release]
debug = 2
op-level = "s"
