[package]
edition = "2024"
name = "rp-controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"
[[bin]]
name = "rp-controller"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-embedded-hal = { version = "*",  features = ["defmt"] }
embassy-sync = { version = "*", features = ["defmt"] }
embassy-executor = { version = "*", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "*", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "*", features = ["defmt"] }
embassy-net = { version = "*", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "mdns"] }
embassy-net-wiznet = { version = "*", features = ["defmt"] }
embassy-futures = { version = "*"  }
embassy-usb-logger = { version = "*"  }
cyw43 = { version = "*", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "*", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

# for TB6612FNG example
tb6612fng = "1.0.0"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = {version = "0.8", features = ["serde"]}
usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = { version = "0.9.0"}
mcp2515 = { version = "0.3.0", features = ["defmt"] }
embedded-can = "0.4.1"
can_contract = {version="*", path="../can_contract/"}
menu = {version="*", path="../menu/"}
bitmaps = { version = "3.2.1", default-features = false }
lcd-lcm1602-i2c =  {version = "0.3.0", features = ["async"]}
embedded-io = "0.6.1"
# [patch.crates-io]
# embassy-usb-logger = {git = "https://github.com/embassy-rs/embassy", rev= "3e1b0e4aec11888d6ea41ef5c62d6d2912d81eae"}
# embassy-rp = {git = "https://github.com/embassy-rs/embassy", rev= "3e1b0e4aec11888d6ea41ef5c62d6d2912d81eae"}
# embassy-net = {git = "https://github.com/embassy-rs/embassy", rev= "3e1b0e4aec11888d6ea41ef5c62d6d2912d81eae"}
# embassy-time = {git = "https://github.com/embassy-rs/embassy", rev= "3e1b0e4aec11888d6ea41ef5c62d6d2912d81eae"}

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
