[package]
name = "rp_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
cyw43 = "0.3.0"
cyw43-pio = "0.4.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = {version = "0.7.0", features= ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = "0.4.0"
panic-probe = "1.0.0"
static_cell = "2.1.0"

