[package]
name = "ultrasonic_level_sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0",features = ["defmt", "defmt-timestamp-uptime", "tick-hz-4_000_000"] }
cortex-m-rt = "0.7.5"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["defmt"] }
log = "0.4.27"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
defmt = "1.0.1"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
